--- a/GarphIt.web/Pages/Canvas.razor
+++ b/GarphIt.web/Pages/Canvas.razor
@@ -43,7 +43,24 @@
 <svg viewBox="@SVGControl.Xaxis @SVGControl.Yaxis @SVGControl.Width @SVGControl.Height"
      tabindex="0" class="@SvgClass" @onmousemove="OnMove" @onmousedown="OnMouseDown" @onkeyup="OnKeyUp" @onkeydown="OnKeyDown"
      @oncontextmenu="OnRightClick" @oncontextmenu:preventDefault="true" @onmouseup="OnMouseUp" @onmousewheel="OnScroll" @onwheel="OnScroll">
-    @if (Nodes != null)
+    @if (StartAlgorithm.Algorithm != Algorithm.None && StartAlgorithm.Done)
+    {
+        @if (AlgorithmNodes != null)
+        {
+            @if (AlgorithmEdges != null)
+            {
+                foreach (Edge edge in AlgorithmEdges)
+                {
+                    <AlgoEdgeLine Edge="edge" Nodes="Nodes" DefaultOptions="DefaultOptions"></AlgoEdgeLine>
+                }
+            }
+            foreach (AlgorithmNode node in AlgorithmNodes)
+            {
+                <AlgoNodeCircle AlgorithmNode="node"></AlgoNodeCircle>
+            }
+        }
+    }
+    else if (Nodes != null)
     {
         @if (Edges != null)
         {
