--- a/GarphIt.web/Pages/View.razor
+++ b/GarphIt.web/Pages/View.razor
@@ -49,7 +49,7 @@ else
     <div class="py-2 px-1 @MatchExact.Css " data-toggle="tooltip" data-placement="bottom" title="Match whole word" 
          @onclick="MatchExactClicked"><u>Ab|</u></div>
     <div class="p-custom">
-        <input class="medInput" placeholder="Label" value="@Filter" @oninput="OnLabelChange" />
+        <input class="medInput" placeholder="Find..." value="@Filter" @oninput="OnLabelChange" />
     </div>
     @if (FilterNodes.Any())
     {
