max-flow, save graph changes

--- a/GarphIt.web/Pages/AlgoNodeCircle.razor
+++ b/GarphIt.web/Pages/AlgoNodeCircle.razor
@@ -1,4 +1,4 @@
-﻿<text x="@(AlgorithmNode.Node.Xaxis+AlgorithmNode.Node.Radius)" y="@(AlgorithmNode.Node.Yaxis+AlgorithmNode.Node.Radius+10)">@AlgorithmNode.Header</text>
+﻿<text x="@AlgorithmNode.Node.Xaxis" y="@(AlgorithmNode.Node.Yaxis-AlgorithmNode.Node.Radius-10)">@AlgorithmNode.Header</text>
 <g id="@AlgorithmNode.Node.NodeId">
     <circle cx="@AlgorithmNode.Node.Xaxis"
             cy="@AlgorithmNode.Node.Yaxis"
