--- a/GarphIt.web/Pages/Home.razor
+++ b/GarphIt.web/Pages/Home.razor
@@ -17,11 +17,12 @@
     <div class="dropdown-menu" aria-labelledby="algos">
         <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.BFS)">BFS</a>
         <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.DFS)">DFS</a>
+        <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.Kruskal)">Kruskals MST</a>
         <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.Dijkstra)">Dijkstras Shortest Distances To Node</a>
         <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.DijkstraPath)">Dijkstras Shortest Path Between 2 Nodes</a>
         <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.MaxFlow)">Max-flow</a>
-        <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.Degree)">Degree Centrality</a>
-        <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.Kruskal)">Kruskals MST</a>
+        <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.Degree)">Degree of vertices</a>
+        <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.DegreeCentrality)">Degree Centrality</a>
     </div>
 </li>
 @if (StartAlgorithm.Algorithm != Algorithm.None)
@@ -36,11 +37,11 @@
     }
     else
     {
-        <li class="navbar-text font-weight-bold">@StartAlgorithm.Output</li>
         @if (!Animate)
         {
             <li class="NavNone p-2" @onclick="() => Animate = true">Animate</li>
-            <li class="NavNone p-2" @onclick="async () => await StartAlgorithmChanged.InvokeAsync(new StartAlgorithm())">Clear</li>
+            <li class="NavNone p-2" @onclick="() => ShowClearModal = true">Clear</li>
+            <li class="navbar-text font-weight-bold alert-success">@StartAlgorithm.Output</li>
         }
         else
         {
@@ -50,4 +51,22 @@
             <li><button class="btn" @onclick="() => Animate = false"><span class="oi oi-x"></span></button></li>
         }
     }
+}
+@if (ShowClearModal)
+{
+    <SfDialog Width="300px" IsModal="true">
+        <DialogTemplates>
+            <Content>
+                <div class="text-center">
+                    <div class="row m-3 border-bottom border-dark">
+                        Save changes to your original graph?
+                    </div>
+                    <div class="d-flex align-items-baseline">
+                        <button class="btn btn-outline-success shadow-none btn-sm" @onclick="Save">Save</button>
+                        <button class="btn btn-outline-danger shadow-none btn-sm" @onclick="Reset">Reset</button>
+                    </div>
+                </div>
+            </Content>
+        </DialogTemplates>
+    </SfDialog>
 }
