zoom, run algo only when possible, centrality

--- a/GarphIt.web/Pages/Canvas.razor
+++ b/GarphIt.web/Pages/Canvas.razor
@@ -60,7 +60,7 @@
             {
                 foreach (Edge edge in AlgorithmEdges)
                 {
-                    <AlgoEdgeLine Edge="edge" Nodes="Nodes" DefaultOptions="DefaultOptions"></AlgoEdgeLine>
+                    <AlgoEdgeLine Edge="edge" AlgorithmNodes="AlgorithmNodes" DefaultOptions="DefaultOptions"></AlgoEdgeLine>
                 }
             }
             foreach (AlgorithmNode node in AlgorithmNodes)
