--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -23,7 +23,7 @@ else
                 <File DefaultOptions="DefaultOptions" SVGControl="SVGControl" @bind-Nodes="Nodes" @bind-Edges="Edges"></File>
                 break;
             case NavChoice.Home:
-                <Home @bind-Rep="Rep" @bind-StartAlgorithm="StartAlgorithm" @bind-ActiveNodes="ActiveNodes"
+                <Home @bind-Rep="Rep" @bind-StartAlgorithm="StartAlgorithm" @bind-ActiveNodes="ActiveNodes" DefaultOptions="DefaultOptions"
                       @bind-ActiveEdges="ActiveEdges" Nodes="Nodes" Edges="Edges" @bind-GraphMode="GraphMode"></Home>
                 break;
             case NavChoice.Insert:
