center algorithm node text

--- a/GarphIt.web/Pages/AlgoNodeCircle.razor
+++ b/GarphIt.web/Pages/AlgoNodeCircle.razor
@@ -1,4 +1,6 @@
-﻿<text x="@AlgorithmNode.Node.Xaxis" y="@(AlgorithmNode.Node.Yaxis-AlgorithmNode.Node.Radius-10)">@AlgorithmNode.Header</text>
+﻿<text x="@AlgorithmNode.Node.Xaxis" 
+      y="@(AlgorithmNode.Node.Yaxis-AlgorithmNode.Node.Radius-10)"
+      text-anchor="middle">@AlgorithmNode.Header</text>
 <g id="@AlgorithmNode.Node.NodeId">
     <circle cx="@AlgorithmNode.Node.Xaxis"
             cy="@AlgorithmNode.Node.Yaxis"
