articulation output, only undirected

--- a/GarphIt.web/Pages/Home.razor
+++ b/GarphIt.web/Pages/Home.razor
@@ -29,7 +29,7 @@
         }
         else
         {
-            <button class="btn dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.Degree)" disabled="@IsDisabled[(int)Algorithm.DegreeCentrality]">Degree Centrality</button>
+            <button class="btn dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.DegreeCentrality)" disabled="@IsDisabled[(int)Algorithm.DegreeCentrality]">Degree Centrality</button>
         }
 
     </div>
